Fixed cart dropdown on mobile

--- a/src/components/CartDropdown/CartDropdown.scss
+++ b/src/components/CartDropdown/CartDropdown.scss
@@ -1,26 +1,45 @@
 .cart-dropdown {
-  position: fixed;
+  position: absolute;
   width: 240px;
+  height: 340px;
   display: flex;
   flex-direction: column;
-  padding: 10px 10px;
-  border: 1px solid #bdbdbd;
+  padding: 20px;
+  border: 1px solid #000000;
   background-color: #dcdcdc;
   top: 80px;
-  right: 10px;
+  right: 0;
   z-index: 5;
+
+  button {
+    margin-top: auto;
+  }
 
   .cart-items {
     height: 240px;
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
+
+    &::-webkit-scrollbar-track {
+      padding: 2px 0;
+      background-color: #dcdcdc;
+    }
+
+    &::-webkit-scrollbar {
+      width: 5px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+      background-color: #bdbdbd;
+    }
   }
 
   .empty-message {
     font-size: 18px;
     margin: auto;
-    color: #000000;
   }
   button {
     margin-top: 10px;
